--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -45,7 +45,9 @@
     <link href="/static/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
+    {% block stylesheet %}
     <link href="/static/assets/css/style.css" rel="stylesheet" />
+    {% endblock %}
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -92,17 +94,39 @@
               <a class="nav-link scrollto" href="medical-team">Medical Team</a>
             </li>
             <li>
-              <a class="nav-link scrollto" href="register">Login/Register</a>
+              <a class="nav-link scrollto" href="login">Login/Register</a>
             </li>
-            <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+            <li><a class="nav-link scrollto" href="register">Contact</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
         <!-- .navbar -->
       </div>
+
     </header>
     <!-- End Header -->
+{% with messages = get_flashed_messages(with_categories=true)%}
+{% if messages %}
+{% for category, message in messages%}
+{% if category== 'error' %}
+<div class="alert alert-danger alter-dismissable fade show" role=alert>
+  {{ message}}
+  <button type"button" class="clase" data-dismiss="alert">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+{% else %}
+<div class="alert alert-success alter-dismissable fade show" role=alert>
+  {{ message}}
+  <button type"button" class="clase" data-dismiss="alert">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+{% endif %}
+{% endfor %}
+{% endif %}
 
+{% endwith %}
     <!-- ======= Hero Section ======= -->
     <section id="hero">
       <div class="hero-container" data-aos="fade-up"></div>
